applications/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - grafana
  routes:
    - kind: Rule
      match: Host(`boulder.local`)
      priority: 10
      services:
        - name: grafana
          port: 80
